2009-11-18  Larry Ewing  <lewing@novell.com>

	* runtime.cpp (PaintToDrawable): fix the lame expose color logic
	so it at least works.

2009-11-18  Larry Ewing  <lewing@novell.com>

	* brush.cpp:
	* media.cpp:
	* shape.cpp:
	* uielement.cpp: check the status of the pattern to avoid drawing
	with it if we are in an error state. And fix a backwards condition
	in the previous patch.
	
	* uielement.cpp: initialize the transforms.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* runtime.cpp: We want to parse MOONLIGHT_DEBUG if LOGGING is defined
	too.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* audio.h:
	* value.cpp:
	* runtime.cpp|h:
	* fontmanager.cpp: Tune ifdefs to allow configuring with logging but
	without debug support.

	* audio.cpp: Fix uninitialized variable warning (used in logging).

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* media.cpp|h:
	* mediaelement.cpp:
	* eventargs.cpp|h: Rename MarkerReachedEventArgs to
	TimelineMarkerRoutedEventArgs to better match managed code, and move
	the class to eventargs.cpp|h together with the rest of the event args
	classes.

	* type.h:
	* value.h:
	* cbinding.cpp|h:
	* type-generated.cpp: Regenerated.

2009-11-17  Larry Ewing  <lewing@novell.com>

	* brush.cpp:
	* multiscaleimage.cpp (RenderCollection): 
	* uielement.cpp (PostRender): Check the status of the pattern
	before trying to draw with it in case something has gone wrong.

	Fixes DRT 1 and and a couple of sites by not putting the cairo
	context into an invalid state.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: ParseASX2: don't verify the end of the uri, there is
	no guarantee the uri has a specific ending.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaplayer.cpp: Open: Call SetSelected and ref on the video stream
	we actually select, and not all of video streams we loop over.

2009-11-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.h: Added LogReady event.
